# LLM-systems-from-scratch

./: .gitignore  generate.py  pyproject.toml  train.py
configures/: sample.yaml
llm-core/: pyproject.toml
llm-core/llm_core/: dataloader.py  model.py  nn_functional.py  optimizer.py
llm-systems/: pyproject.toml
llm-systems/llm_systems/kernels/: triton_adamw.py  triton_cross_entropy.py  triton_rms_norm.py  triton_swiglu.py
llm-systems/llm_systems/parallelism/: ddp.py  fsdp_zero3.py
tokenizer/: BPETokenizer.py
