[project]
name = "llm-systems-from-scratch"
version = "0.1.0"
description = "LLM systems built from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm-core",
    "numpy",
    "pyyaml>=6.0",
    "regex>=2024.11.6",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
]

[tool.setuptools.packages.find]
include = ["llm_core", "configures"]

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
llm-core = { path = "./llm-core", editable = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]
