[project]
name = "llm-systems"
version = "0.1.0"
description = "LLM systems/perf layer: Triton kernels and distributed parallelism"
requires-python = ">=3.11"
dependencies = [
    "llm-core",
    "numpy",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "triton; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
include = ["llm_systems"]

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
llm-core = { path = "../llm-core", editable = true }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]
ignore = ["F722"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "E501"]
